--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "html-entities": "~2.3.2",
     "http-errors": "~1.6.3",
     "libxmljs": "~0.19.7",
-    "mathjs": "~3.10.1",
+    "mathjs": "3.9.3",
     "mongoose": "~5.12.7",
     "morgan": "~1.9.1",
     "request": "~2.88.2",
